// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`autoresize\` prop matches with snapshot 1`] = `
<div
  className="sc-gsDKAQ dTVKjq k-Form-TextInput__textareaContainer"
>
  <textarea
    className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--autoresize k-Form-TextInput--regular"
    disabled={false}
    name="text"
    onChange={[Function]}
    rows={1}
    style={
      Object {
        "lineHeight": "1.125rem",
      }
    }
  />
  <div
    className="k-Form-TextInput__textareaGradient"
  />
</div>
`;

exports[`<TextInput /> with \`center\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--regular k-Form-TextInput--alignCenter"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`darkBackground\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--regular k-Form-TextInput--darkBackground"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput-hasDigits k-Form-TextInput-hasDigits_12 k-Form-TextInput--regular"
  disabled={false}
  name="text"
  style={
    Object {
      "--input-content-width": 12,
    }
  }
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--regular k-Form-TextInput--disabled"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--regular k-Form-TextInput--error"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--regular"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`size\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--regular"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--regular"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`textarea\` tag matches with snapshot 1`] = `
<div
  className="sc-gsDKAQ dTVKjq k-Form-TextInput__textareaContainer"
>
  <textarea
    className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--textarea k-Form-TextInput--regular"
    disabled={false}
    name="message"
  />
  <div
    className="k-Form-TextInput__textareaGradient"
  />
</div>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="sc-bdvvtL huvuwE k-Form-TextInput k-Form-TextInput--regular k-Form-TextInput--valid"
  disabled={false}
  name="text"
/>
`;
